name:           pangen
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       generate random haskell functions
build-type:     Simple
build-depends:  FUtil, HUnit, MonadRandom, base, containers, mtl

executable:     pangen
main-is:        Main.hs
hs-source-dirs: src
